wasapi loopback captures audio from a muted device
Describe your issue
Both wasapi and waspi2 sources captures audio from a muted device when loopback=true.
wasapi2src provides a mute
property however this value is related only to the application's mute
state reported in the Windows audio mixer.
The global device's mute
state is completely ignored during audio grabbing.
Expected Behavior
- No audio should be captured when the device is muted.
Observed Behavior
- Both wasapisrc+loopback and waspi2src+loopback captures audio when the device is muted.