subprojects/gst-plugins-bad/sys/wasapi2/gstwasapi2client.h
@@ -79,6 +79,8 @@ gboolean           gst_wasapi2_client_ensure_activation (GstWasapi2Client * clie
 
 IAudioClient *     gst_wasapi2_client_get_handle (GstWasapi2Client * client);
 
+gboolean           gst_wasapi2_client_is_endpoint_muted (GstWasapi2Client * client);
+
 GstCaps *          gst_wasapi2_client_get_caps (GstWasapi2Client * client);
 
 G_END_DECLS
